data/derived/comb/progs/unify/prog0042.ml.out
Characters 60-80:
  | hd::tl -> listReverse tl :: hd;;
              ^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
